Mudanças no modal, PAASMANUT-1563

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -166,8 +166,8 @@
 	"showModalName": "Exibe modal",
 	"showModalDescription": "Função que exibe um modal",
 	"showModalParam0": "Modal",
-	"createDefaultModalParam5": "No Sucesso",
-	"createDefaultModalParam6": "No Erro",
+	"createDefaultModalParam5": "Ao confirmar",
+	"createDefaultModalParam6": "Ao cancelar",
 	"XMLGetElementValue": "Obtém valor do elemento",
 	"XMLGetElementValueDescription": "Função que retorna o valor de um elemento",
 	"XMLGetElementValueParam0": "Elemento passado para obter-se o valor",
@@ -190,12 +190,13 @@
 	"XMLGetParentElementDescription": "Função que retorna o pai de um elemento",
 	"XMLGetElementTagNameName": "Obtém a tag do elemento",
 	"XMLGetElementTagNameDescription": "Função que retorna o nome da tag do elemento",
-	"XMLGetElementValueName":"Obter valor do elemento",
-  "LogicIsNullParam" : "Variável : Variável a ser verificada",
-  "LogicIsNullName": "é nulo?",
-  "LogicIsNullDescription" : "Função que verifique se a variável é nula",
-  "LogicIsNullOrEmptyName": "é nulo ou vazio?",
-  "LogicIsNullOrEmptyDescription" : "Função que verifique se a variável é nula ou vazia",
-  "LogicIsEmptyName": "é vazio?",
-  "LogicIsEmptyDescription" : "Função que verifique se a variável é vazia"
+	"XMLGetElementValueName": "Obter valor do elemento",
+	"LogicIsNullParam": "Variável : Variável a ser verificada",
+	"LogicIsNullName": "é nulo?",
+	"LogicIsNullDescription": "Função que verifique se a variável é nula",
+	"LogicIsNullOrEmptyName": "é nulo ou vazio?",
+	"LogicIsNullOrEmptyDescription": "Função que verifique se a variável é nula ou vazia",
+	"LogicIsEmptyName": "é vazio?",
+	"LogicIsEmptyDescription": "Função que verifique se a variável é vazia",
+	"createDefaultModalParam7": "Ao fechar"
 }
