--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -190,12 +190,13 @@
 	"XMLGetParentElementDescription": "Function that return the parent element",
 	"XMLGetElementTagNameName": "Get element tag",
 	"XMLGetElementTagNameDescription": "Function that return the element tag",
-	"XMLGetElementValueName":"Get element value",
-  "LogicIsNullParam" : "Variable: Variable to be checked",
-  "LogicIsNullName": "is null?",
-  "LogicIsNullDescription" : "Function that check if a variable is null",
-  "LogicIsNullOrEmptyName": "is null or empty?",
-  "LogicIsNullOrEmptyDescription" : "Function that check if a variable is null or empty",
-  "LogicIsEmptyName": "is empty?",
-  "LogicIsEmptyDescription" : "Function that check if a variable is empty"
+	"XMLGetElementValueName": "Get element value",
+	"LogicIsNullParam": "Variable: Variable to be checked",
+	"LogicIsNullName": "is null?",
+	"LogicIsNullDescription": "Function that check if a variable is null",
+	"LogicIsNullOrEmptyName": "is null or empty?",
+	"LogicIsNullOrEmptyDescription": "Function that check if a variable is null or empty",
+	"LogicIsEmptyName": "is empty?",
+	"LogicIsEmptyDescription": "Function that check if a variable is empty",
+	"createDefaultModalParam7": "On close"
 }
