--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -157,17 +157,13 @@
 	"confirmDialogDescription": "Função que exibe uma confirmação da ação e retorna verdadeiro ou falso",
 	"confirmDialogParam0": "Mensagem",
 	"createDefaultModalDescription": "Função que cria um modal",
-	"createDefaultModalName": "Cria Modal",
-	"createDefaultModalParam0": "Identificador",
-	"createDefaultModalParam1": "Titulo",
-	"createDefaultModalParam2": "Mensagem",
-	"createDefaultModalParam3": "Nome do botão cancelar",
-	"createDefaultModalParam4": "Nome do botão confirmar",
-	"showModalName": "Exibe modal",
-	"showModalDescription": "Função que exibe um modal",
-	"showModalParam0": "Modal",
-	"createDefaultModalParam5": "Ao confirmar",
-	"createDefaultModalParam6": "Ao cancelar",
+	"createDefaultModalName": "Cria Modal: Função que cria e exibe um modal",
+	"createDefaultModalParam1": "Título: Título do modal",
+	"createDefaultModalParam2": "Mensagem: Mensagem exibida no modal",
+	"createDefaultModalParam3": "Nome do botão cancelar: Nome atribuído ao botão cancelar do modal",
+	"createDefaultModalParam4": "Nome do botão confirmar: Nome atribuído ao botão confirmar do modal",
+	"createDefaultModalParam5": "Ao confirmar: comandos executados ao clicar no botão atribuído ao confirmar do modal",
+	"createDefaultModalParam6": "Ao cancelar: comandos executados ao clicar no botão atribuído ao cancelar do modal",
 	"XMLGetElementValue": "Obtém valor do elemento",
 	"XMLGetElementValueDescription": "Função que retorna o valor de um elemento",
 	"XMLGetElementValueParam0": "Elemento passado para obter-se o valor",
@@ -198,5 +194,5 @@
 	"LogicIsNullOrEmptyDescription": "Função que verifique se a variável é nula ou vazia",
 	"LogicIsEmptyName": "é vazio?",
 	"LogicIsEmptyDescription": "Função que verifique se a variável é vazia",
-	"createDefaultModalParam7": "Ao fechar"
+	"createDefaultModalParam7": "Ao fechar: Comandos executados ao clicar no botão de fechar modal."
 }
