--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -164,29 +164,10 @@
 	"createDefaultModalParam4": "Confirm button name",
 	"createDefaultModalParam5": "On Success: Statements to be executed when a confirm button is clicked on modal",
 	"createDefaultModalParam6": "On Cancel: Statements to be executed when a cancel button is clicked on modal",
-	"XMLGetElementValue": "Get element value",
-	"XMLGetElementValueDescription": "Function that return a element value",
-	"XMLGetElementValueParam0": "Element: Element to get value",
-	"XMLGetChildElementName": "Get first child element",
-	"XMLGetChildElementDescription": "Function to return node",
 	"node": "Node",
 	"childName": "Child name",
-	"XMLGetRootName": "Get root element",
-	"XMLGetRootDescription": "Function that return the root element from a element",
 	"element": "Element",
-	"XMLGetAttributeName": "Get attribute from element",
-	"XMLGetAttributeDescription": "Function that return a attribute from a element",
 	"attribute": "Attribute",
-	"XMLOpenName": "Create xml document",
-	"XMLOpenDescription": "Função que cria um objeto Document a partir de uma String",
-	"XMLOpenParam0": "XML name",
-	"XMLGetChildrenElementName": "Search elementl children",
-	"XMLGetChildrenElementDescription": "Function that return the element children from element",
-	"XMLGetParentElementName": "return the parent element",
-	"XMLGetParentElementDescription": "Function that return the parent element",
-	"XMLGetElementTagNameName": "Get element tag",
-	"XMLGetElementTagNameDescription": "Function that return the element tag",
-	"XMLGetElementValueName": "Get element value",
 	"LogicIsNullParam": "Variable: Variable to be checked",
 	"LogicIsNullName": "is null?",
 	"LogicIsNullDescription": "Function that check if a variable is null",
@@ -197,5 +178,7 @@
 	"createDefaultModalParam7": "On close: statements executed when close button is clicked on modal",
 	"executeJavascriptNoReturnName": "Execute javascript",
 	"executeJavascriptNoReturnDescription": "Function that execute a javascript",
-	"executeJavascriptNoReturnParam0": "Command:Command to be executed (example: alert('test');)."
+	"executeJavascriptNoReturnParam0": "Command:Command to be executed (example: alert('test');).",
+	"newXMLEmptyName":"Create XML",
+	"newXMLEmptyDescription":"Function that create a XML document"
 }
