--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -164,29 +164,10 @@
 	"createDefaultModalParam4": "Nome do botão confirmar: Nome atribuído ao botão confirmar do modal",
 	"createDefaultModalParam5": "Ao confirmar: comandos executados ao clicar no botão atribuído ao confirmar do modal",
 	"createDefaultModalParam6": "Ao cancelar: comandos executados ao clicar no botão atribuído ao cancelar do modal",
-	"XMLGetElementValue": "Obtém valor do elemento",
-	"XMLGetElementValueDescription": "Função que retorna o valor de um elemento",
-	"XMLGetElementValueParam0": "Elemento passado para obter-se o valor",
-	"XMLGetChildElementName": "Obtém o primeiro filho do elemento",
-	"XMLGetChildElementDescription": "Função para retornar o nó",
 	"node": "Nó",
 	"childName": "Nome do filho",
-	"XMLGetRootName": "Obtém a raiz do elemento",
-	"XMLGetRootDescription": "Função que retorna o elemento raiz a partir de um elemento",
 	"element": "Elemento",
-	"XMLGetAttributeName": "Obtém o atributo do elemento",
-	"XMLGetAttributeDescription": "Função que retorna o atributo de um elemento",
 	"attribute": "Atributo",
-	"XMLOpenName": "Cria documento xml",
-	"XMLOpenDescription": "Função que cria um objeto Document a partir de uma String",
-	"XMLOpenParam0": "Nome para xml",
-	"XMLGetChildrenElementName": "Busca filhos do elemento",
-	"XMLGetChildrenElementDescription": "Função que retorna os filhos do tipo de um determinado elemento",
-	"XMLGetParentElementName": "Retorna o elemento pai",
-	"XMLGetParentElementDescription": "Função que retorna o pai de um elemento",
-	"XMLGetElementTagNameName": "Obtém a tag do elemento",
-	"XMLGetElementTagNameDescription": "Função que retorna o nome da tag do elemento",
-	"XMLGetElementValueName": "Obter valor do elemento",
 	"LogicIsNullParam": "Variável : Variável a ser verificada",
 	"LogicIsNullName": "é nulo?",
 	"LogicIsNullDescription": "Função que verifique se a variável é nula",
@@ -197,5 +178,9 @@
 	"createDefaultModalParam7": "Ao fechar: Comandos executados ao clicar no botão de fechar modal.",
 	"executeJavascriptNoReturnName": "Executa javascript",
 	"executeJavascriptNoReturnDescription": "Função que executa javascript",
-	"executeJavascriptNoReturnParam0": "Comando:Comando a ser executado (exemplo: alert('teste');)."
+	"executeJavascriptNoReturnParam0": "Comando:Comando a ser executado (exemplo: alert('teste');).",
+	"newXMLEmptyName":"Cria XML",
+	"newXMLEmptyDescription":"Função que cria um documento XML",
+	"newXMLEmptyWithRootName":"Cria XML",
+	"newXMLEmptyWithRootDescription":"Função que cria um XML com o elemento raiz"
 }
