Mudanças no xml, PAASMANUT-1550 , PAASMANUT-1553 , PAASMANUT-1556

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -179,8 +179,42 @@
 	"executeJavascriptNoReturnName": "Executa javascript",
 	"executeJavascriptNoReturnDescription": "Função que executa javascript",
 	"executeJavascriptNoReturnParam0": "Comando:Comando a ser executado (exemplo: alert('teste');).",
-	"newXMLEmptyName":"Cria XML",
-	"newXMLEmptyDescription":"Função que cria um documento XML",
-	"newXMLEmptyWithRootName":"Cria XML",
-	"newXMLEmptyWithRootDescription":"Função que cria um XML com o elemento raiz"
+	"newXMLEmptyName": "Cria XML",
+	"newXMLEmptyDescription": "Função que cria um documento XML",
+	"newXMLEmptyWithRootName": "Cria XML",
+	"newXMLEmptyWithRootDescription": "Função que cria um XML com o elemento raiz",
+	"rootElement": "Elemento raiz",
+	"newXMLElementName": "Cria elemento XML",
+	"newXMLElementDescription": "Função que cria um elemento XML",
+	"elementName": "Nome do elemento",
+	"addXMLElementName": "Adiciona elemento XML",
+	"addXMLElementDescription": "Função que adiciona um elemento XML no elemento pai",
+	"parentElement": "Elemento pai",
+	"elementToAdd": "Elemento para adicionar",
+	"XMLHasRootElementName": "Existe elemento raiz?",
+	"XMLHasRootElementDescription": "Função que verifica se existe elemento raiz no documento XML",
+	"XMLGetRootElementName": "Obtém elemento raiz",
+	"XMLGetRootElementDescription": "Função que obtém o elemento raiz a partir de um documento XML ou a partir de um elemento XML",
+	"XMLDocumentToTextName": "Converte XML para texto",
+	"XMLDocumentToTextDescription": "Função que converte um XML ou elemento XMl para texto",
+	"getChildrenName": "Obtém elementos filhos",
+	"getChildrenDescription": "Função que retorna uma lista com os elementos filhos do elemento",
+	"getChildrenParam1": "Valor para buscar:Pode-se passar um elemento ou um nome de elemento a ser buscado",
+	"setAttributeName": "Define valor do atributo",
+	"setAttributeDescription": "Função que atribui um valor ao atributo",
+	"attributeName": "Nome do atributo",
+	"attributeValue": "Valor do atributo",
+	"getAttributeValueName": "Obtém valor do atributo",
+	"getAttributeValueDescription": "Função que obtém o valor o valor do atributo",
+	"getParentNodeName": "Obtém elemento pai",
+	"getParentNodeDescription": "Função que retorna o elemento pai do elemento XML",
+	"setElementValueName":"Definir conteúdo do elemento",
+	"setElementValueDescription":"Função que define o conteúdo de um elemento",
+	"removeElementName":"Remove elemento",
+	"removeElementDescription":"Função que recebe um elemento pai e um elemento ou nome de elemento para remover",
+	"getElementNameName":"Obtém nome do elemento",
+	"getElementNameDescription":"Função que obtém o nome do elemento, exemplo <teste> retorna teste",
+	"renameElementName":"Renomeia elemento",
+	"renameElementDescription":"Função que renomeia o elemento, exemplo: antes <elementoAntigo/> após:<elementoNovo/>",
+	"name":"Nome"
 }
