--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -179,6 +179,39 @@
 	"executeJavascriptNoReturnName": "Execute javascript",
 	"executeJavascriptNoReturnDescription": "Function that execute a javascript",
 	"executeJavascriptNoReturnParam0": "Command:Command to be executed (example: alert('test');).",
-	"newXMLEmptyName":"Create XML",
-	"newXMLEmptyDescription":"Function that create a XML document"
+	"newXMLEmptyName": "Create XML",
+	"newXMLEmptyDescription": "Function that create a XML document",
+	"rootElement": "Root element",
+	"newXMLElementName": "Create XML element",
+	"newXMLElementDescription": "Function that create a XML element",
+	"elementName": "Element name",
+	"addXMLElementName": "Function that add a XML element inside a parent element",
+	"addXMLElementDescription": "Add XML element",
+	"parentElement": "Parent element",
+	"elementToAdd": "Element to add",
+	"XMLHasRootElementDescription": "Function that verify if exists a XML root element on XML document",
+	"XMLGetRootElementName": "Get root element",
+	"XMLGetRootElementDescription": "Function that get a root element from a XML document or from a XMl element",
+	"XMLDocumentToTextName": "Convert XML to text",
+	"XMLDocumentToTextDescription": "Function that convert a XML document or XML element to text",
+	"getChildrenName": "Get children element",
+	"getChildrenDescription": "Function that return a list with children element",
+	"getChildrenParam1": "Value to search:A element or a element name to be search key",
+	"setAttributeName": "Set an attribute value",
+	"setAttributeDescription": "Function that set an attribute value on attribute",
+	"attributeName": "Attribute name",
+	"attributeValue": "Attribute value",
+	"getAttributeValueName": "Get an attribute value",
+	"getAttributeValueDescription": "Function that get an attribute value",
+	"getParentNodeName": "Get parent element",
+	"getParentNodeDescription": "Function that return a parent element from a XML element",
+	"setElementValueName": "Set a content element",
+	"setElementValueDescription": "Function that set a content on element",
+		"removeElementName":"Remove element",
+	"removeElementDescription":"Function that receive a Função que recebe um elemento pai e um elemento ou nome de elemento para remover",
+	"getElementNameName":"Get an element name",
+	"getElementNameDescription":"Function that get an element name, example <test> return test",
+	"renameElementName":"Rename element",
+	"renameElementDescription":"Function that rename an element name, example: before<oldElement/> after:<newElement/>",
+	"name":"Name"
 }
