Adição de funções de esconder e exibir componente por id

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -207,16 +207,21 @@
 	"getParentNodeDescription": "Function that return a parent element from a XML element",
 	"setElementValueName": "Set a content element",
 	"setElementValueDescription": "Function that set a content on element",
-	"removeElementName":"Remove element",
-	"removeElementDescription":"Function that receive a Função que recebe um elemento pai e um elemento ou nome de elemento para remover",
-	"getElementNameName":"Get an element name",
-	"getElementNameDescription":"Function that get an element name, example <test> return test",
-	"renameElementName":"Rename element",
-	"renameElementDescription":"Function that rename an element name, example: before<oldElement/> after:<newElement/>",
-	"name":"Name",
-	"newXMLEmptyWithRootName":"Create XML",
-	"XMLHasRootElementName":"Has Root element?",
-	"getElementContentName":"Get element content",
-	"getElementContentDescription":"Function that get a content from element. Example <element>content<element> return content",
-	 "datasource" : "Datasource"
+	"removeElementName": "Remove element",
+	"removeElementDescription": "Function that receive a Função que recebe um elemento pai e um elemento ou nome de elemento para remover",
+	"getElementNameName": "Get an element name",
+	"getElementNameDescription": "Function that get an element name, example <test> return test",
+	"renameElementName": "Rename element",
+	"renameElementDescription": "Function that rename an element name, example: before<oldElement/> after:<newElement/>",
+	"name": "Name",
+	"newXMLEmptyWithRootName": "Create XML",
+	"XMLHasRootElementName": "Has Root element?",
+	"getElementContentName": "Get element content",
+	"getElementContentDescription": "Function that get a content from element. Example <element>content<element> return content",
+	"datasource": "Datasource",
+	"showComponent": "Show component",
+	"showComponentDesc": "Function that shows a component on screen",
+	"ComponentParam": "Identifier: Component identifier to be showed on screen",
+	"hideComponent": "Hide component",
+	"hideComponentDesc": "Function that hide a component on screen"
 }
