--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -219,5 +219,10 @@
 	"name":"Nome",
 	"getElementContentName":"Obter conteúdo do elemento",
 	"getElementContentDescription":"Função para obter o conteúdo do elemento. Exemplo <elemento>conteúdo<elemento> retorna conteúdo",
-	"datasource" : "Fonte de dados"
+	"datasource" : "Fonte de dados",
+	"showComponent":"Exibir componente",
+	"showComponentDesc":"Função que exibe um componente da tela",
+	"ComponentParam":"Identificador: Identificador do componente a ser modificado",
+	"hideComponent":"Esconder componente",
+	"hideComponentDesc":"Função que esconde um componente da tela"
 }
