Adicionado tradução para as categorias que estavam faltando

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -223,5 +223,7 @@
 	"showComponentDesc": "Function that shows a component on screen",
 	"ComponentParam": "Identifier: Component identifier to be showed on screen",
 	"hideComponent": "Hide component",
-	"hideComponentDesc": "Function that hide a component on screen"
+	"hideComponentDesc": "Function that hide a component on screen",
+	"CategoryType.TEXT": "Text",
+  "CategoryType.LOGIC": "Logic"
 }
