correções de tags html que estavam sendo renderizadas na documentação

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -210,14 +210,14 @@
 	"removeElementName": "Remove element",
 	"removeElementDescription": "Function that receive a Função que recebe um elemento pai e um elemento ou nome de elemento para remover",
 	"getElementNameName": "Get an element name",
-	"getElementNameDescription": "Function that get an element name, example <test> return test",
+	"getElementNameDescription": "Function that get an element name, example < test> return test",
 	"renameElementName": "Rename element",
-	"renameElementDescription": "Function that rename an element name, example: before<oldElement/> after:<newElement/>",
+	"renameElementDescription": "Function that rename an element name, example: before: < oldElement/> after:< newElement/>",
 	"name": "Name",
 	"newXMLEmptyWithRootName": "Create XML",
 	"XMLHasRootElementName": "Has Root element?",
 	"getElementContentName": "Get element content",
-	"getElementContentDescription": "Function that get a content from element. Example <element>content<element> return content",
+	"getElementContentDescription": "Function that get a content from element. Example < element>content< element> return content",
 	"datasource": "Datasource",
 	"showComponent": "Show component",
 	"showComponentDesc": "Function that shows a component on screen",
@@ -227,9 +227,9 @@
 	"CategoryType.TEXT": "Text",
   "CategoryType.LOGIC": "Logic",
   "searchIds":"Identifier",
-	"searchIdsDescription":"Identifier field from screen. Example <div id=myId /> ",
+	"searchIdsDescription":"Identifier field from screen",
 	"enableComponent":"Enable component",
-	"enableComponentDesc":"Function that enable a component from screen. Example: <input disabled=false />",
+	"enableComponentDesc":"Function that enable a component from screen",
 	"disableComponent":"Disable component",
-	"disableComponentDesc":"Function that disable a component from screen. Example: <input disabled=true"
+	"disableComponentDesc":"Function that disable a component from screen"
 }
