--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -213,12 +213,12 @@
 	"removeElementName":"Remove elemento",
 	"removeElementDescription":"Função que recebe um elemento pai e um elemento ou nome de elemento para remover",
 	"getElementNameName":"Obtém nome do elemento",
-	"getElementNameDescription":"Função que obtém o nome do elemento, exemplo <teste> retorna teste",
+	"getElementNameDescription":"Função que obtém o nome do elemento, exemplo < teste> retorna teste",
 	"renameElementName":"Renomeia elemento",
-	"renameElementDescription":"Função que renomeia o elemento, exemplo: antes <elementoAntigo/> após:<elementoNovo/>",
+	"renameElementDescription":"Função que renomeia o elemento, exemplo: antes < elementoAntigo/> após:< elementoNovo/>",
 	"name":"Nome",
 	"getElementContentName":"Obter conteúdo do elemento",
-	"getElementContentDescription":"Função para obter o conteúdo do elemento. Exemplo <elemento>conteúdo<elemento> retorna conteúdo",
+	"getElementContentDescription":"Função para obter o conteúdo do elemento. Exemplo < elemento>conteúdo< elemento> retorna conteúdo",
 	"datasource" : "Fonte de dados",
 	"showComponent":"Exibir componente",
 	"showComponentDesc":"Função que exibe um componente da tela",
@@ -228,10 +228,10 @@
 	"CategoryType.TEXT": "Texto",
   "CategoryType.LOGIC": "Lógica",
 	"searchIds":"Identificador",
-	"searchIdsDescription":"Identificador do campo da tela. Exemplo <div id=meuId /> ",
+	"searchIdsDescription":"Identificador do campo da tela",
 	"enableComponent":"Habilitar componente",
-	"enableComponentDesc":"Função que habilita o componente o uso do componente na tela. Exemplo <input disabled=false/>",
+	"enableComponentDesc":"Função que habilita o componente o uso do componente na tela",
 	"disableComponent":"Desabilitar componente",
-	"disableComponentDesc":"Função que desabilita o uso do componente na tela. Exemplo: <input disabled=true />"
+	"disableComponentDesc":"Função que desabilita o uso do componente na tela"
 	
 }
