--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -235,16 +235,16 @@
 	"disableComponentDesc":"Function that disable a component from screen",
 	"CategoryType.OBJECT" : "Object",
   "getProperty" : "Get Property",
-  "getPropertyDescription" : "Function to get object property."
+  "getPropertyDescription" : "Function to get object property.",
   "object" : "Object,
   "property" : "Property",
   "setProperty" : "Set Value",
-  "setPropertyDescription" : "Function to assign value to object."
-  "CategoryType.OBJECT" : "Cordova",
+  "setPropertyDescription" : "Function to assign value to object.",
+  "CategoryType.DEVICE" : "Mobile Devices",
   "vibrate" : "Vibrate",
-  "vibrateDescription" : "Function to vibrate the mobile device."
+  "vibrateDescription" : "Function to vibrate the mobile device.",
   "getCurrentPosition" : "Get geo-referenced position",
-  "getCurrentPositionDescription" : "Function to obtain geo-referenced position."
+  "getCurrentPositionDescription" : "Function to obtain geo-referenced position.",
   "success" : "Success",
   "error" : "Error",
   "watchPosition" : "Observe Position",
