Incremento de versão para 0.0.46-develop

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -236,7 +236,7 @@
 	"CategoryType.OBJECT" : "Object",
   "getProperty" : "Get Property",
   "getPropertyDescription" : "Function to get object property.",
-  "object" : "Object,
+  "object" : "Object",
   "property" : "Property",
   "setProperty" : "Set Value",
   "setPropertyDescription" : "Function to assign value to object.",
