INclusão de novas funções para dispositivos moveis. (Storage, File)

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -259,5 +259,28 @@
 	"clearWatch": "Stop Observe",
 	"idsFromScreen": "Get Identifier: Identifier (id) to be gotten from a selected form",
 	"attrName": "Attribute name: Attribute name on a identifier. Example: src='test' returns src",
-	"attrValue": "Attribute value: Attribute value on a identifier. Example: src='test' returns test"
+	"attrValue": "Attribute value: Attribute value on a identifier. Example: src='test' returns test",
+  "getDirectory" : "Get Directory",
+  "getDirectoryDescription" : "Function to get directory on the mobile device.",
+  "INTERNAL" : "INTERNAL",
+  "EXTERNAL" : "EXTERNAL",
+  "removeFile" : "Remove File",
+  "fileName" : "File Name",
+  "removeFileDescription" : "Function to remove file on mobile device.",
+  "readFile" : "Read File",
+  "readFileDescription" : "Function to read a file on the mobile device.",
+  "createFile" : "Create File",
+  "createFileDescription" : "Function to create a file on the mobile device.",
+  "dirEntry" : "Directory",
+  "createDirectory" : "Create Directory",
+  "dirParent" : "Parent Directory",
+  "dirChildrenName" : "Directory Name",
+  "setStorageItem" : "Add Storage Item",
+  "key" : "Key",
+  "setStorageItemDescription" : "Function to store values in 'Local Storage'.",
+  "getStorageItem" : "Get Storage Item",
+  "getStorageItemDescription" : "Function to obtain value stored in 'Local Storage'.",
+  "removeStorageItem" : "Remove Storage Item",
+  "removeStorageItemDescription" : "Function to remove the value stored in the key in 'Local Storage'.",
+  "watchID" : "Observe Id"
 }
