--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -261,6 +261,28 @@
   "clearWatch" : "Parar Observador",
   "idsFromScreen":"Obter identificador: Identificador (id) a ser obtido do Formulário selecionado",
   "attrName":"Nome do atributo: Nome do atributo contido no Identificador. Exemplo:  src='teste' retorna src",
-  "attrValue":"Valor do atributo: Valor do atributo contido no Identificador. Exemplo:  src='teste' retorna teste"
-  
+  "attrValue":"Valor do atributo: Valor do atributo contido no Identificador. Exemplo:  src='teste' retorna teste",
+  "getDirectory" : "Obter Diretório",
+  "getDirectoryDescription" : "Função para obter diretório no dispositivo móvel.",
+  "INTERNAL" : "INTERNO",
+  "EXTERNAL" : "EXTERNO",
+  "removeFile" : "Remover Arquivo",
+  "fileName" : "Nome do Arquivo",
+  "removeFileDescription" : "Função para remover o arquivo no dispositivo móvel. ",
+  "readFile" : "Ler Arquivo",
+  "readFileDescription" : "Função para ler um arquivo no dispositivo móvel.",
+  "createFile" : "Criar Arquivo",
+  "createFileDescription" : "Função para criar um arquivo no dispositivo móvel.",
+  "dirEntry" : "Diretório",
+  "createDirectory" : "Criar Diretório",
+  "dirParent" : "Diretório Pai",
+  "dirChildrenName" : "Nome do Diretório",
+  "setStorageItem" : "Adicionar item de armazenamento",
+  "key" : "Chave",
+  "setStorageItemDescription" : "Função para armazenar valores no 'Local Storage'.",
+  "getStorageItem" : "Obter Item  de armazenamento",
+  "getStorageItemDescription" : "Função para obter valor armazenado no 'Local Storage'.",
+  "removeStorageItem" : "Remover Item de armazenamento",
+  "removeStorageItemDescription" : "Função para remover o valor armazenado na chave no 'Local Storage'.",
+  "watchID" : "Identificação do Observador"
 }
