Alteração para receber um objeto na função de "vibrar" pois o parametro pode ser um array de inteiros

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -296,5 +296,5 @@
   "CellGenericConnection" : "Cell generic connection",
   "NoNetworkConnection" : "No network connection",
   "type" : "Type",
-  "vibrateValue" : "Value: Parameter is Integer or Integer List."
+  "vibrateValue" : "Milliseconds: Parameter is Integer or Integer List."
 }
