--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -296,5 +296,12 @@
   "CellGenericConnection" : "Cell generic connection",
   "NoNetworkConnection" : "No network connection",
   "type" : "Type",
-  "vibrateValue" : "Milliseconds: Parameter is Integer or Integer List."
+  "vibrateValue" : "Milliseconds: Parameter is Integer or Integer List.",
+  "getCurrentAcceleration" : "Get Current Acceleration" ,
+  "getCurrentAccelerationDescription" : "Function that provides access to device accelerometer.",
+  "watchAcceleration" : "Observe Acceleration" ,
+  "watchAccelerationDescription" : "Function to monitor device acceleration.",
+  "clearWatchAcceleration" : "Stop Acceleration Watcher" ,
+  "clearWatchAccelerationhDescription" : "Function to cancel accelerometer monitoring.",
+  "clearWatchPositionDescription" : "Function to cancel geo-referenced positioning monitoring."
 }
