Correção de nomenclaturas

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -260,43 +260,50 @@
 	"idsFromScreen": "Get Identifier: Identifier (id) to be gotten from a selected form",
 	"attrName": "Attribute name: Attribute name on a identifier. Example: src='test' returns src",
 	"attrValue": "Attribute value: Attribute value on a identifier. Example: src='test' returns test",
-  "getDirectory" : "Get Directory",
-  "getDirectoryDescription" : "Function to get directory on the mobile device.",
-  "INTERNAL" : "INTERNAL",
-  "EXTERNAL" : "EXTERNAL",
-  "removeFile" : "Remove File",
-  "fileName" : "File Name",
-  "removeFileDescription" : "Function to remove file on mobile device.",
-  "readFile" : "Read File",
-  "readFileDescription" : "Function to read a file on the mobile device.",
-  "createFile" : "Create File",
-  "createFileDescription" : "Function to create a file on the mobile device.",
-  "dirEntry" : "Directory",
-  "createDirectory" : "Create Directory",
-  "dirParent" : "Parent Directory",
-  "dirChildrenName" : "Directory Name",
-  "setStorageItem" : "Add Storage Item",
-  "key" : "Key",
-  "setStorageItemDescription" : "Function to store values in 'Local Storage'.",
-  "getStorageItem" : "Get Storage Item",
-  "getStorageItemDescription" : "Function to obtain value stored in 'Local Storage'.",
-  "removeStorageItem" : "Remove Storage Item",
-  "removeStorageItemDescription" : "Function to remove the value stored in the key in 'Local Storage'.",
-  "watchID" : "Observe Id",
-  "getConnection" : "Network Status",
-  "getConnectionDescription" : "Function to provides information about the device's cellular and wifi connection",
-  "verifyConnection" : "Check Network Status",
-  "verifyConnectionDescription" : "Function to check the status of the device connection.",
-  "UnknownConnection" : "Unknown connection",
-  "EthernetConnection" : "Ethernet connection",
-  "WiFiConnection" : "WiFi connection",
-  "Cell2GConnection" : "Cell 2G connection",
-  "Cell3GConnection" : "Cell 3G connection",
-  "Cell4GConnection" : "Cell 4G connection",
-  "CellGenericConnection" : "Cell generic connection",
-  "NoNetworkConnection" : "No network connection",
-  "type" : "Type",
-  "vibrateValue" : "Milliseconds: Parameter is Integer or Integer List.",
-  "changeAttrValueName":"Change attribute value",
-  "changeAttrValueDesc":"Function that change an attribute value from a element"
+	"getDirectory": "Get Directory",
+	"getDirectoryDescription": "Function to get directory on the mobile device.",
+	"INTERNAL": "INTERNAL",
+	"EXTERNAL": "EXTERNAL",
+	"removeFile": "Remove File",
+	"fileName": "File Name",
+	"removeFileDescription": "Function to remove file on mobile device.",
+	"readFile": "Read File",
+	"readFileDescription": "Function to read a file on the mobile device.",
+	"createFile": "Create File",
+	"createFileDescription": "Function to create a file on the mobile device.",
+	"dirEntry": "Directory",
+	"createDirectory": "Create Directory",
+	"dirParent": "Parent Directory",
+	"dirChildrenName": "Directory Name",
+	"setStorageItem": "Add Storage Item",
+	"key": "Key",
+	"setStorageItemDescription": "Function to store values in 'Local Storage'.",
+	"getStorageItem": "Get Storage Item",
+	"getStorageItemDescription": "Function to obtain value stored in 'Local Storage'.",
+	"removeStorageItem": "Remove Storage Item",
+	"removeStorageItemDescription": "Function to remove the value stored in the key in 'Local Storage'.",
+	"watchID": "Observe Id",
+	"getConnection": "Network Status",
+	"getConnectionDescription": "Function to provides information about the device's cellular and wifi connection",
+	"verifyConnection": "Check Network Status",
+	"verifyConnectionDescription": "Function to check the status of the device connection.",
+	"UnknownConnection": "Unknown connection",
+	"EthernetConnection": "Ethernet connection",
+	"WiFiConnection": "WiFi connection",
+	"Cell2GConnection": "Cell 2G connection",
+	"Cell3GConnection": "Cell 3G connection",
+	"Cell4GConnection": "Cell 4G connection",
+	"CellGenericConnection": "Cell generic connection",
+	"NoNetworkConnection": "No network connection",
+	"type": "Type",
+	"vibrateValue": "Milliseconds: Parameter is Integer or Integer List.",
+	"changeAttrValueName": "Change attribute value",
+	"changeAttrValueDesc": "Function that change an attribute value from a element",
+	"getCurrentAcceleration": "Get Current Acceleration",
+	"getCurrentAccelerationDescription": "Function that provides access to device accelerometer.",
+	"watchAcceleration": "Observe Acceleration",
+	"watchAccelerationDescription": "Function to monitor device acceleration.",
+	"clearWatchAcceleration": "Stop Acceleration Watcher",
+	"clearWatchAccelerationhDescription": "Function to cancel accelerometer monitoring.",
+	"clearWatchPositionDescription": "Function to cancel geo-referenced positioning monitoring."
 }
